Fix spacing of "There is no interpreter currently running."

--- a/src/vs/workbench/contrib/positronConsole/browser/components/emptyConsole.css
+++ b/src/vs/workbench/contrib/positronConsole/browser/components/emptyConsole.css
@@ -10,5 +10,5 @@
 
 .empty-console .title {
 	text-align: left;
-	margin-left: 20px;
+	margin: 10px 0 0 10px;
 }
